core/target/generated-sources/antlr4/letrain/command/LeTrainProgramParser.java
// Generated from letrain/command/LeTrainProgram.g4 by ANTLR 4.13.2
package letrain.command;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class LeTrainProgramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, NUMBER=51, STRING=52, 
		WS=53;
	public static final int
		RULE_start = 0, RULE_statement = 1, RULE_directCommand = 2, RULE_directTrainCommand = 3, 
		RULE_createItinerary = 4, RULE_assignItinerary = 5, RULE_setAutopilot = 6, 
		RULE_setNameCommand = 7, RULE_bool = 8, RULE_trainRef = 9, RULE_waypoint = 10, 
		RULE_stationRef = 11, RULE_sensorRef = 12, RULE_direction = 13, RULE_action = 14, 
		RULE_trigger = 15, RULE_sensorSelector = 16, RULE_forkSelector = 17, RULE_semaphoreSelector = 18, 
		RULE_stationSelector = 19, RULE_trainSelector = 20, RULE_trainEvent = 21, 
		RULE_commandBlock = 22, RULE_commandItem = 23, RULE_trainExtractor = 24, 
		RULE_placeSelector = 25, RULE_semaphoreAction = 26, RULE_forkAction = 27, 
		RULE_trainAction = 28, RULE_linkAction = 29, RULE_unlinkAction = 30, RULE_semaphoreStatus = 31, 
		RULE_forkDirection = 32, RULE_trainSense = 33, RULE_trainSpeed = 34, RULE_sense = 35, 
		RULE_dir = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "statement", "directCommand", "directTrainCommand", "createItinerary", 
			"assignItinerary", "setAutopilot", "setNameCommand", "bool", "trainRef", 
			"waypoint", "stationRef", "sensorRef", "direction", "action", "trigger", 
			"sensorSelector", "forkSelector", "semaphoreSelector", "stationSelector", 
			"trainSelector", "trainEvent", "commandBlock", "commandItem", "trainExtractor", 
			"placeSelector", "semaphoreAction", "forkAction", "trainAction", "linkAction", 
			"unlinkAction", "semaphoreStatus", "forkDirection", "trainSense", "trainSpeed", 
			"sense", "dir"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'train'", "'create'", "'itinerary'", "'{'", "'}'", "'assign'", 
			"'to'", "'set'", "'autopilot'", "'station'", "'name'", "'sensor'", "'true'", 
			"'false'", "'add'", "'load'", "'unload'", "'reverse'", "'stop'", "'wait'", 
			"'speed'", "'on'", "'crash'", "'contact'", "'fork'", "'semaphore'", "'enter'", 
			"'exit'", "'link'", "'unlink'", "'train at'", "'accelerate'", "'decelerate'", 
			"'invert'", "'open'", "'closed'", "'straight'", "'curved'", "'flip'", 
			"'forward'", "'backward'", "'e'", "'ne'", "'n'", "'nw'", "'w'", "'sw'", 
			"'s'", "'se'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "NUMBER", "STRING", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LeTrainProgram.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LeTrainProgramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LeTrainProgramVisitor ) return ((LeTrainProgramVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(74);
				statement();
				}
				}
				setState(77); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 201336972L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public TriggerContext trigger() {
			return getRuleContext(TriggerContext.class,0);
		}
		public CommandBlockContext commandBlock() {
			return getRuleContext(CommandBlockContext.class,0);
		}
		public CreateItineraryContext createItinerary() {
			return getRuleContext(CreateItineraryContext.class,0);
		}
		public DirectCommandContext directCommand() {
			return getRuleContext(DirectCommandContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LeTrainProgramVisitor ) return ((LeTrainProgramVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				trigger();
				setState(80);
				commandBlock();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				createItinerary();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				directCommand();
				setState(84);
				match(T__0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DirectCommandContext extends ParserRuleContext {
		public AssignItineraryContext assignItinerary() {
			return getRuleContext(AssignItineraryContext.class,0);
		}
		public SetAutopilotContext setAutopilot() {
			return getRuleContext(SetAutopilotContext.class,0);
		}
		public SetNameCommandContext setNameCommand() {
			return getRuleContext(SetNameCommandContext.class,0);
		}
		public DirectTrainCommandContext directTrainCommand() {
			return getRuleContext(DirectTrainCommandContext.class,0);
		}
		public DirectCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).enterDirectCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).exitDirectCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LeTrainProgramVisitor ) return ((LeTrainProgramVisitor<? extends T>)visitor).visitDirectCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DirectCommandContext directCommand() throws RecognitionException {
		DirectCommandContext _localctx = new DirectCommandContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_directCommand);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				assignItinerary();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				setAutopilot();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				setNameCommand();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(91);
				directTrainCommand();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DirectTrainCommandContext extends ParserRuleContext {
		public TrainRefContext trainRef() {
			return getRuleContext(TrainRefContext.class,0);
		}
		public TrainActionContext trainAction() {
			return getRuleContext(TrainActionContext.class,0);
		}
		public DirectTrainCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directTrainCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).enterDirectTrainCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).exitDirectTrainCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LeTrainProgramVisitor ) return ((LeTrainProgramVisitor<? extends T>)visitor).visitDirectTrainCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DirectTrainCommandContext directTrainCommand() throws RecognitionException {
		DirectTrainCommandContext _localctx = new DirectTrainCommandContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_directTrainCommand);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__1);
			setState(95);
			trainRef();
			setState(96);
			trainAction();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateItineraryContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(LeTrainProgramParser.STRING, 0); }
		public List<WaypointContext> waypoint() {
			return getRuleContexts(WaypointContext.class);
		}
		public WaypointContext waypoint(int i) {
			return getRuleContext(WaypointContext.class,i);
		}
		public CreateItineraryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createItinerary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).enterCreateItinerary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).exitCreateItinerary(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LeTrainProgramVisitor ) return ((LeTrainProgramVisitor<? extends T>)visitor).visitCreateItinerary(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateItineraryContext createItinerary() throws RecognitionException {
		CreateItineraryContext _localctx = new CreateItineraryContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_createItinerary);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__2);
			setState(99);
			match(T__3);
			setState(100);
			match(STRING);
			setState(101);
			match(T__4);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__15) {
				{
				{
				setState(102);
				waypoint();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignItineraryContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(LeTrainProgramParser.STRING, 0); }
		public TrainRefContext trainRef() {
			return getRuleContext(TrainRefContext.class,0);
		}
		public AssignItineraryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignItinerary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).enterAssignItinerary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).exitAssignItinerary(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LeTrainProgramVisitor ) return ((LeTrainProgramVisitor<? extends T>)visitor).visitAssignItinerary(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignItineraryContext assignItinerary() throws RecognitionException {
		AssignItineraryContext _localctx = new AssignItineraryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignItinerary);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(T__6);
			setState(111);
			match(T__3);
			setState(112);
			match(STRING);
			setState(113);
			match(T__7);
			setState(114);
			match(T__1);
			setState(115);
			trainRef();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SetAutopilotContext extends ParserRuleContext {
		public TrainRefContext trainRef() {
			return getRuleContext(TrainRefContext.class,0);
		}
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public SetAutopilotContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setAutopilot; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).enterSetAutopilot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).exitSetAutopilot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LeTrainProgramVisitor ) return ((LeTrainProgramVisitor<? extends T>)visitor).visitSetAutopilot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetAutopilotContext setAutopilot() throws RecognitionException {
		SetAutopilotContext _localctx = new SetAutopilotContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_setAutopilot);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(T__1);
			setState(118);
			trainRef();
			setState(119);
			match(T__8);
			setState(120);
			match(T__9);
			setState(121);
			bool();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SetNameCommandContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(LeTrainProgramParser.NUMBER, 0); }
		public TerminalNode STRING() { return getToken(LeTrainProgramParser.STRING, 0); }
		public SetNameCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setNameCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).enterSetNameCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).exitSetNameCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LeTrainProgramVisitor ) return ((LeTrainProgramVisitor<? extends T>)visitor).visitSetNameCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetNameCommandContext setNameCommand() throws RecognitionException {
		SetNameCommandContext _localctx = new SetNameCommandContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_setNameCommand);
		try {
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				match(T__10);
				setState(124);
				match(NUMBER);
				setState(125);
				match(T__8);
				setState(126);
				match(T__11);
				setState(127);
				match(STRING);
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				match(T__12);
				setState(129);
				match(NUMBER);
				setState(130);
				match(T__8);
				setState(131);
				match(T__11);
				setState(132);
				match(STRING);
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 3);
				{
				setState(133);
				match(T__1);
				setState(134);
				match(NUMBER);
				setState(135);
				match(T__8);
				setState(136);
				match(T__11);
				setState(137);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoolContext extends ParserRuleContext {
		public BoolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).enterBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).exitBool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LeTrainProgramVisitor ) return ((LeTrainProgramVisitor<? extends T>)visitor).visitBool(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoolContext bool() throws RecognitionException {
		BoolContext _localctx = new BoolContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_bool);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			_la = _input.LA(1);
			if ( !(_la==T__13 || _la==T__14) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TrainRefContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(LeTrainProgramParser.NUMBER, 0); }
		public TerminalNode STRING() { return getToken(LeTrainProgramParser.STRING, 0); }
		public TrainRefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trainRef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).enterTrainRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).exitTrainRef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LeTrainProgramVisitor ) return ((LeTrainProgramVisitor<? extends T>)visitor).visitTrainRef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TrainRefContext trainRef() throws RecognitionException {
		TrainRefContext _localctx = new TrainRefContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_trainRef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_la = _input.LA(1);
			if ( !(_la==NUMBER || _la==STRING) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WaypointContext extends ParserRuleContext {
		public StationRefContext stationRef() {
			return getRuleContext(StationRefContext.class,0);
		}
		public DirectionContext direction() {
			return getRuleContext(DirectionContext.class,0);
		}
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public SensorRefContext sensorRef() {
			return getRuleContext(SensorRefContext.class,0);
		}
		public WaypointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_waypoint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).enterWaypoint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).exitWaypoint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LeTrainProgramVisitor ) return ((LeTrainProgramVisitor<? extends T>)visitor).visitWaypoint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WaypointContext waypoint() throws RecognitionException {
		WaypointContext _localctx = new WaypointContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_waypoint);
		int _la;
		try {
			setState(168);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				match(T__15);
				setState(145);
				match(T__10);
				setState(146);
				stationRef();
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2243003720663040L) != 0)) {
					{
					setState(147);
					direction();
					}
				}

				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8257536L) != 0)) {
					{
					{
					setState(150);
					action();
					}
					}
					setState(155);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				match(T__15);
				setState(157);
				match(T__12);
				setState(158);
				sensorRef();
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2243003720663040L) != 0)) {
					{
					setState(159);
					direction();
					}
				}

				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8257536L) != 0)) {
					{
					{
					setState(162);
					action();
					}
					}
					setState(167);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StationRefContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(LeTrainProgramParser.STRING, 0); }
		public TerminalNode NUMBER() { return getToken(LeTrainProgramParser.NUMBER, 0); }
		public StationRefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stationRef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).enterStationRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LeTrainProgramListener ) ((LeTrainProgramListener)listener).exitStationRef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LeTrainProgramVisitor ) return ((LeTrainProgramVisitor<? extends T>)visitor).visitStationRef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StationRefContext stationRef() throws RecognitionException {
		StationRefContext _localctx = new StationRefContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_stationRef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			_la = _input.LA(1);
			if ( !(_la==NUMBER || _la==STRING) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
